--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/17/n12482843.md#1" title="【独家】严控意识形态 习近平左转三节点""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-146033862-600x400-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12485349.md#1" title="万人拉和平人链 德民众：中共病毒令人惊醒""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/IMG_6394-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/kztpea348/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://kztpea348.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>36分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488570.md#1">日本超级电脑显示 中共病毒如何在用餐时传播</a><br>
-:clock8: <em>51分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488244.md#1">连降两级 花旗将小米手机评级降至“卖出”</a><br>
+:clock8: <em>13分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488322.md#1">受疫情冲击 传国泰航空将全球裁员6000人</a><br>
+:clock8: <em>51分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488570.md#1">日本超级电脑显示 中共病毒如何在用餐时传播</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488244.md#1">连降两级 花旗将小米手机评级降至“卖出”</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488450.md#1">组图：川普图森竞选集会 谈边界筑墙政绩</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488366.md#1">印度裔老人花1500天 走了地球一圈</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488458.md#1">富士康称继续与美政府合作 投资威州创造就业</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488381.md#1">文件签名显示送修电脑的是亨特·拜登本人</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12485538.md#1">【拍案惊奇】纽时围川普救拜登 中共五中换人？</a><br>
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484638.md#1">【珍言真语】刘锐绍：林郑失宠 港官六神无主</a><br>
@@ -41,7 +41,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 365,882,343 人
+!共 365,882,859 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
