--- a/gb/20/10/19/n12487702.md
+++ b/gb/20/10/19/n12487702.md
@@ -34,7 +34,11 @@
 <h3>土耳其新增病例超2,000 达5月初水平</h3>
 <p>周一（19日），土耳其单日新增病例数突破了2,000，达到5月初对企业和家庭实施限制时最后一次所见的水平。</p>
 <p>路透社报导说，卫生部的数据显示，又有2,026个表现出症状的人确诊染疫。土耳其继续仅报告有症状的病例，遭到反对派和医学专家的批评。</p>
-<p>5月6日新确诊了2,253例病例。</p>
+<blockquote class="twitter-tweet">
+<p lang="en" dir="ltr"><ahref="https://twitter.com/hashtag/Turkey?src=hash&amp;ref_src=twsrc%5Etfw">#Turkey</a>’s daily number of new <ahref="https://twitter.com/hashtag/coronavirus?src=hash&amp;ref_src=twsrc%5Etfw">#coronavirus</a> cases surpassed 2,000 on Monday, reaching levels last seen in early May. <ahref="https://t.co/QT05t1amKa">https://t.co/QT05t1amKa</a> <ahref="https://t.co/R9UyABvbr4"></a><img width="600" src="https://raw.githubusercontent.com/kztpea348/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/kztpea348/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="R9UyABvbr4</a></p>
+<p>&mdash; Arab News (@arabnews) <ahref="https://twitter.com/arabnews/status/1318479577740554241?ref_src=twsrc%5Etfw">October 20, 2020</a></p></blockquote>
+<p> <a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
+5月6日新确诊了2,253例病例。</p>
 <p>数据显示，截至周一，患者总数达到349,519人。 </p>
 <p>数据还显示，过去24小时内新增了75人死亡，也达到5月初以来的单日最高水平，使死亡总人数升至9,371人。</p>
 <p>为减缓病毒的传播，土耳其于今年早些时候实行了周末封锁，限制城市间旅行并关闭餐馆和咖啡馆。6月份，几乎所有限制都被取消。 此后，政府实施了社交疏离和戴口罩等措施，并对违反规定者处以罚款。</p>
@@ -147,7 +151,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/9/n10204699.md#1" target="_blank">古玉文：消灭私有制不是出路（中）</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/20/n11398383.md#1" target="_blank">人权组织执行主任：一起曝光中共邪恶罪行</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/2/n11563735.md#1" target="_blank">林辉：中共70年来的弥天大谎</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/14/n11587779.md#1" target="_blank">台北修炼心得交流会 法轮功学员谈身心改变</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
