--- a/gb/20/10/19/n12487702.md
+++ b/gb/20/10/19/n12487702.md
@@ -156,7 +156,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/7/n10464792.md#1" target="_blank">本真：《推背图》预言中美朝日大战及结局（二）</a></li><li><a href="https://github.com/jpmljf3654/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/2/26/n4648466.md#1" target="_blank">在法轮大法中修炼重生的宁德人（二）</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/10/n10702629.md#1" target="_blank">【还原史实】反右运动 中国知识分子惨遭摧折</a></li><li><a href="https://github.com/jpmljf3654/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/6/n11238180.md#1" target="_blank">感恩法轮功师父 教我做个善良人</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
