--- a/gb/20/10/31/n12515027.md
+++ b/gb/20/10/31/n12515027.md
@@ -342,7 +342,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/23/n11473593.md#1" target="_blank">林辉：六七香港红潮 新华社分社发动菠萝战</a></li><li><a href="https://github.com/aovsvx368/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/21/n11602447.md#1" target="_blank">他们为我们的生活带来光明（4）</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/26/n11280593.md#1" target="_blank">观雨堂主：吴晗——不止是个人的悲哀</a></li><li><a href="https://github.com/aovsvx368/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/9/n7982398.md#1" target="_blank">大陆教师：婆婆神奇经历改变我的世界观</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
