--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,7 +1,7 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/aovsvx368/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/aovsvx368/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/aovsvx368/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/aovsvx368/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/aovsvx368/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/aovsvx368/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/aovsvx368/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/aovsvx368/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/aovsvx368/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/aovsvx368/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/aovsvx368/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/aovsvx368/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/aovsvx368/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/aovsvx368/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/aovsvx368/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/aovsvx368/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/aovsvx368/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/aovsvx368/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/aovsvx368/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/aovsvx368/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/aovsvx368/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/hG75Ez1eTyeZN.mp4" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/YongHeng-360p.mp4" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/Lijianhui-200804-720.mp4" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/dmt.mp4" target="_blank">江鬼</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/rs/Uc6y.mp4" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-10/425.mp4" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-12-23/lin-720p.mp4" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/wnrl.mp4" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/5-YiSu_MH-360p.mp4" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/1-Xuezhongmei_MH-360p.mp4" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-18/huangxiaomin-tuidang.mp4" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525260.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229454030-320x200.jpg"><p align="center">选情胶着 美关键摇摆州结果延迟 暂无赢家</p></a>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525260.md#1" title="选情胶着 美关键摇摆州结果延迟 暂无赢家""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229454030-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/2/n12518740.md#1" title="【大选更新】 川普：我赢了 拜登自信能赢""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/TrumpBiden-1200x720-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/2/n12518740.md#1" title="【大选更新】 川普团队集资 拟提法律挑战""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/TrumpBiden-1200x720-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525212.md#1" title="大陆网文指美国大选是“正邪较量”引共鸣""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/Screen-Shot-2020-11-04-at-11.07.13-am-320x200.png">&nbsp;</a>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12523578.md#1" title="【国会大选更新】参院决出28席位 选情胶着""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/Screen-Shot-2020-11-03-at-11.36.58-PM-1-320x200.png">&nbsp;</a>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12524693.md#1" title="川普：停止计票是舞弊 得票率领先足以胜选""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229449771-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/3/n12522711.md#1" title="美印日澳联合军演 联手应对中共军事扩张""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/50552713693_1f5f47a336_o-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/3/n12522124.md#1" title="新西兰政要：我们都应站出来对中共说不""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/2020-11-2-new-zealand-auckland_02-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/aovsvx368/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://aovsvx368.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>28分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12524956.md#1">10月份 至少65名法轮功学员被非法判刑</a><br>
-:clock8: <em>29分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525504.md#1">成都街道强征 上百联防队员开路 村民被打</a><br>
-:clock8: <em>55分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12524308.md#1">美国女子划艇观海遭座头鲸一口吞下 奇迹生还</a><br>
+:clock8: <em>39分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12524956.md#1">10月份 至少65名法轮功学员被非法判刑</a><br>
+:clock8: <em>40分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525504.md#1">成都街道强征 上百联防队员开路 村民被打</a><br>
+:clock8: <em>43分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525585.md#1">【薇羽看世间】通往白宫之路</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12524308.md#1">美国女子划艇观海遭座头鲸一口吞下 奇迹生还</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525523.md#1">李克强河南考察时 半空突传凄厉喊冤声</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525101.md#1">组图：美总统大选日 威州选民投票概况</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525350.md#1">被问川普是否胜选 中共外交部表态微妙</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525101.md#1">组图：美总统大选日 威州选民投票概况</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/3/n12521231.md#1">【翻墙必看】55岁华为副总裁猝死</a><br>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12524176.md#1">【翻墙必看】马云得罪王岐山？蚂蚁集团暂停上市</a><br>
@@ -42,11 +42,11 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 366,862,120 人
+!共 366,862,151 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
-<a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/2/n12518740.md#1">【大选更新】 川普：我赢了 拜登自信能赢</a><br>
+<a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/2/n12518740.md#1">【大选更新】 川普团队集资 拟提法律挑战</a><br>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525212.md#1">大陆网文指美国大选是“正邪较量”引共鸣</a><br>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/3/n12523460.md#1">蚂蚁集团暂缓上市 分析：马云恐难翻身</a><br>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/3/n12521031.md#1">【内幕】高校内部文件泄中共无自信</a><br>
