--- a/gb/20/10/31/n12515027.md
+++ b/gb/20/10/31/n12515027.md
@@ -342,7 +342,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/15/n10784939.md#1" target="_blank">共产暴政录：“抗美援朝”真相</a></li><li><a href="https://github.com/aovsvx368/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/16/n10855894.md#1" target="_blank">绝处逢生 韩国男子见证两个奇迹</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/20/n10576459.md#1" target="_blank">晓明：桂林“文革”运动的回忆与思考</a></li><li><a href="https://github.com/aovsvx368/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/12/n11583426.md#1" target="_blank">悉尼女律师：修炼让我找到了人生意义</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
