--- a/gb/20/10/31/n12515027.md
+++ b/gb/20/10/31/n12515027.md
@@ -342,7 +342,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/17/n9856265.md#1" target="_blank">毛泽东诗词中的“真情”与马列婚外情</a></li><li><a href="https://github.com/aovsvx368/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/28/n9085516.md#1" target="_blank">一位英国亚裔女士的生命礼物</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/16/n10307862.md#1" target="_blank">中共淫乱的前生今世（11）前车之鉴</a></li><li><a href="https://github.com/aovsvx368/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/11/n4660107.md#1" target="_blank">修炼法轮功 7旬老人弯成90度的腰直起来</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
