--- a/gb/20/10/31/n12515027.md
+++ b/gb/20/10/31/n12515027.md
@@ -333,16 +333,16 @@
 
 
 <strong>相关新闻：</strong>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525585.md#1">【薇羽看世间】通往白宫之路</a></li>
 <li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525350.md#1">被问川普是否胜选 中共外交部表态微妙</a></li>
 <li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525442.md#1">美国正式退出巴黎气候协议</a></li>
 <li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12524549.md#1">美国大选开票 中共控制报导 网民议论纷纷</a></li>
-<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/3/n12523081.md#1">侵占尼泊尔领土 中共外交部遭记者接连质问</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/16/n10307862.md#1" target="_blank">中共淫乱的前生今世（11）前车之鉴</a></li><li><a href="https://github.com/aovsvx368/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/11/n4660107.md#1" target="_blank">修炼法轮功 7旬老人弯成90度的腰直起来</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/3/n10828040.md#1" target="_blank">大饥荒是中共有计划的屠杀手段（中）</a></li><li><a href="https://github.com/aovsvx368/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/31/n11625277.md#1" target="_blank">法轮功真相传入太平洋热带岛国瓦努阿图</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
