--- a/gb/20/10/31/n12515027.md
+++ b/gb/20/10/31/n12515027.md
@@ -342,7 +342,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/18/n10859288.md#1" target="_blank">慧勉：古代官员善心理政故事数则</a></li><li><a href="https://github.com/aovsvx368/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/2/n10948448.md#1" target="_blank">新年感恩 中国百姓盼李洪志大师早日回国</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/24/n10585277.md#1" target="_blank">郭小林：“发配”老马号</a></li><li><a href="https://github.com/aovsvx368/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/15/n11385671.md#1" target="_blank">嫁到韩国的中国媳妇：守住善就能走出困境</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
