--- a/gb/20/10/31/n12515027.md
+++ b/gb/20/10/31/n12515027.md
@@ -342,7 +342,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/8/n10285705.md#1" target="_blank">李庆霖“知青英雄”悲剧是如何造成的(下)</a></li><li><a href="https://github.com/aovsvx368/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/15/n10487846.md#1" target="_blank">功夫·寻道——武术大师李有甫的故事</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/30/n10007999.md#1" target="_blank">文武：反“礼教”与中共罪恶</a></li><li><a href="https://github.com/aovsvx368/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/16/n3684317.md#1" target="_blank">我的人生，注定是一场修炼</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
